@@ -23,6 +23,7 @@ import static org.junit.Assert.assertTrue;
 
 import android.app.ActivityManager;
 import android.app.AppOpsManager;
+import android.app.job.JobInfo;
 import android.content.Context;
 import android.jobscheduler.cts.jobtestapp.TestJobSchedulerReceiver;
 import android.os.SystemClock;
@@ -40,7 +41,6 @@ import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
-import java.util.Collections;
 import java.util.Map;
 
 @RunWith(AndroidJUnit4.class)
@@ -51,6 +51,7 @@ public class ExpeditedJobTest {
     private Context mContext;
     private UiDevice mUiDevice;
     private int mTestJobId;
+    private NetworkingHelper mNetworkingHelper;
     private TestAppInterface mTestAppInterface;
 
     @Before
@@ -62,23 +63,33 @@ public class ExpeditedJobTest {
         setTestPackageStandbyBucket(mUiDevice, JobThrottlingTest.Bucket.ACTIVE);
         AppOpsUtils.setOpMode(TEST_APP_PACKAGE, APP_OP_GET_USAGE_STATS,
                 AppOpsManager.MODE_ALLOWED);
+        mNetworkingHelper = new NetworkingHelper(
+                InstrumentationRegistry.getInstrumentation(), mContext);
     }
 
     @After
     public void tearDown() throws Exception {
         mTestAppInterface.cleanup();
         AppOpsUtils.reset(TEST_APP_PACKAGE);
+        mNetworkingHelper.tearDown();
     }
 
     @Test
-    public void testJobUidState() throws Exception {
+    public void testJobUidState_withRequiredNetwork() throws Exception {
         // Turn screen off so any lingering activity close processing from previous tests
         // don't affect this one.
         ScreenUtils.setScreenOn(false);
-        mTestAppInterface.scheduleJob(Map.of(
-                TestJobSchedulerReceiver.EXTRA_AS_EXPEDITED, true,
-                TestJobSchedulerReceiver.EXTRA_REQUEST_JOB_UID_STATE, true
-        ), Collections.emptyMap());
+        mNetworkingHelper.setAllNetworksEnabled(true);
+        mTestAppInterface.scheduleJob(
+                Map.of(
+                        TestJobSchedulerReceiver.EXTRA_AS_EXPEDITED, true,
+                        TestJobSchedulerReceiver.EXTRA_REQUEST_JOB_UID_STATE, true
+                ),
+                Map.of(
+                        TestJobSchedulerReceiver.EXTRA_REQUIRED_NETWORK_TYPE,
+                        JobInfo.NETWORK_TYPE_ANY
+                )
+        );
         mTestAppInterface.forceRunJob();
         assertTrue("Job did not start after scheduling",
                 mTestAppInterface.awaitJobStart(DEFAULT_WAIT_TIMEOUT_MS));
